tests/baselines/reference/functionOverloadImplementationOfWrongName.errors.txt
==== tests/cases/compiler/functionOverloadImplementationOfWrongName.ts (1 errors) ====
    function foo(x);
    function foo(x, y);
    function bar() { }
             ~~~
!!! error TS1043: Function overload name must be 'foo'.